--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,22 @@ data
 .venv
 creds.sh
 *.tsv
+*.csv
 *.json
 *.Rda
+*.rds
+*.jsonl
+*DEPRECATED*
+old
+z_old
+deleteme
 annotation_output
+annotation_output*
+scratch*
+payment/
+paper/
+submission
+literature
+presentation
+00*
+news/
