--- a/code/sources/5-impute/makefile
+++ b/code/sources/5-impute/makefile
@@ -5,3 +5,6 @@ orgs.imputed.tsv: impute-pairwise.py orgs.tsv
 
 sources.imputed.tsv: orgs.imputed.tsv impute.R
 	Rscript impute.R
+
+orgs.tsv: prepare.R ../4-comments/sources.comments.clean.tsv
+	Rscript prepare.R
